z-index and button-play-pause fix

--- a/src/components/SwipeMenu/style.css
+++ b/src/components/SwipeMenu/style.css
@@ -1,3 +1,4 @@
+@import "./../../variables.css";
 
 .ui-swipe-menu__main,
 .ui-swipe-menu__bg {
@@ -7,7 +8,7 @@
 }
 
 .ui-swipe-menu__main {
-	z-index:var(--swipe-menu-z-index, 100);
+	z-index:var(--z-index-3);
 	background:var(--swipe-menu-background, white);
 	width:var(--swipe-menu-width, 80vw); 
 	height:var(--swipe-menu-height, 100vh);
@@ -23,7 +24,7 @@ swipe-menu[position=right] .ui-swipe-menu__main {
 }
 
 .ui-swipe-menu__bg {
-	z-index:calc(var(--swipe-menu-z-index, 100) - 1);
+	z-index:calc(var(--z-index-3, 100) - 1);
 	opacity:0;
 	width:100%; height:100%;
 	background:rgba(0,0,0,0.2);
