--- a/src/components/SwipePane/style.css
+++ b/src/components/SwipePane/style.css
@@ -1,3 +1,5 @@
+@import "./../../variables.css";
+
 @layer ui {
 
 	:root {
@@ -27,7 +29,7 @@
 		position:fixed;
 		top:0;
 		left:0;
-		z-index:400;
+		z-index:var(--z-index-3);
 	}
 
 	.ui-swipepane--right {
